Adding the pie chart of rides by city type in the PyBer.ipynb

--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -2802,7 +2802,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "b71756fe",
+   "id": "532ecb50",
    "metadata": {},
    "outputs": [
     {
@@ -2825,7 +2825,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "2341e852",
+   "id": "9b456320",
    "metadata": {},
    "outputs": [
     {
@@ -2852,7 +2852,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "30368fcf",
+   "id": "f5ae6603",
    "metadata": {},
    "outputs": [
     {
@@ -2879,7 +2879,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "67ed3a2c",
+   "id": "64ac4c8f",
    "metadata": {},
    "outputs": [
     {
@@ -2902,7 +2902,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "20c3f2a0",
+   "id": "f2adfd2b",
    "metadata": {},
    "outputs": [
     {
@@ -2932,7 +2932,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "c993adcb",
+   "id": "936d6353",
    "metadata": {},
    "outputs": [
     {
@@ -2968,11 +2968,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 81,
+   "id": "2153af92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "Rural        5.263158\n",
+       "Suburban    26.315789\n",
+       "Urban       68.421053\n",
+       "Name: ride_id, dtype: float64"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate the percentage of rides for each city type.\n",
+    "ride_percents = 100 * pyber_data_df.groupby([\"type\"]).count()[\"ride_id\"] / pyber_data_df[\"ride_id\"].count()\n",
+    "ride_percents"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5591fdf1",
+   "id": "770822c3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Build percentage of rides by city type pie chart.\n",
+    "plt.subplots(figsize=(10, 6))\n",
+    "plt.pie(ride_percents,\n",
+    "    labels=[\"Rural\", \"Suburban\", \"Urban\"],\n",
+    "    colors=[\"gold\", \"lightskyblue\", \"lightcoral\"],\n",
+    "    explode=[0, 0, 0.1],\n",
+    "    autopct='%1.1f%%',\n",
+    "    shadow=True, startangle=150)\n",
+    "plt.title(\"% of Total Rides by City Type\")\n",
+    "# Change the default font size from 10 to 14.\n",
+    "mpl.rcParams['font.size'] = 14\n",
+    "# Save Figure\n",
+    "plt.savefig(\"analysis/Fig6.png\")\n",
+    "# Show Figure\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
